Fix tiny gap between avatar border and img

--- a/client/src/shared/components/UIElements/Avatar.css
+++ b/client/src/shared/components/UIElements/Avatar.css
@@ -1,16 +1,16 @@
 .avatar {
 	margin: 0 auto;
-	box-sizing: border-box;
 	position: relative;
 	z-index: 10;
+	border-radius: 50%;
 }
 
 .avatar img {
+	position: absolute;
 	display: block;
-	border-radius: 100%;
+	border-radius: 50%;
 	width: 100%;
 	height: 100%;
-	object-fit: fill;
 }
 
 .avatar--small {
